add jvmArgs for tests